--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -4,13 +4,14 @@
   <div class="space-y-6">
     <%= f.input :name %>
     <%= f.input :description %>
+
     <% if @product.images.attached? %>
 
-
-
-
       <div class="border-t">
-        <div class="text-md font-medium text-gray-800 my-4 pl-4">Photos</div>
+        <div class="flex space-x-3 items-center px-4 py-3">
+          <div class="text-sm font-medium text-slate-700">Photos</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.images.size} Photos" %></span>
+        </div>
 
         <div class="flex border-t">
 
@@ -46,13 +47,17 @@
               <%= f.file_field :images, direct_upload: true, multiple: true, data: { upload_target: "input", action: "change->upload#uploadFile" }, style: "display: none;" %>
 
               <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "upload#triggerFileInput" } do %>
-                <div class="bg-indigo-50 px-2 py-2 border-b border-indigo-100 text-xs font-semibold text-indigo-600 hover:bg-indigo-100 flex items-center w-full">
-                  <%= inline_svg_tag("icons/queue-list.svg", class: "h-3 w-3 shrink-0 text-indigo-500")%>
-                  <div class="ml-2">Add photos</div>
+                <div class="p-6 w-full flex flex-col items-center">
+                  <div class="relative w-full flex flex-col items-center rounded-lg border-2 border-dashed border-gray-200 p-12 text-center hover:border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                    <%= inline_svg_tag("icons/cube-transparent.svg", class: "h-10 w-10 text-indigo-500")%>
+                    <span class="mt-2 block text-[11px] font-semibold text-slate-500">Ajoutez des photos</span>
+                  </div>
+                  <small class="text-[8px] font-semibold text-center text-slate-400 mt-1">Sauvegardez le produit pour enregister les photos</small>
                 </div>
               <% end %>
 
-              <div data-upload-target="preview" class="flex flex-col w-full items-center p-6"></div>
+              <div data-upload-target="preview" class="flex flex-col w-full items-center">
+              </div>
 
             </div>
 
@@ -66,7 +71,7 @@
 
     <% else %>
       <div class="border-t">
-        <div class="text-md font-medium text-gray-800 my-4">Photos</div>
+        <div class="text-sm font-medium text-slate-700 my-4">Photos</div>
 
         <div class="flex border-t">
 
@@ -119,32 +124,51 @@
       <% end %>
     </div>
 
-    <div class="flex p-6 flex-wrap">
-      <% @product.options.each_with_index do |option, index| %>
-        <div class="w-1/5 p-4" id="option_<%= option.id %>">
-          <div class="flex items-center space-x-3 justify-between">
-            <div class="flex items-center">
-              <%= inline_svg_tag("icons/queue-list.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
-              <div class="ml-1 text-xs font-bold"><%= index + 1 %></div>
-            </div>
-            <% if option.persisted? %>
-              <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
-                <div class="flex space-x-3 items-center">
-                  <%= inline_svg_tag("icons/minus-circle.svg", class: "h-4 w-4 shrink-0 text-red-600")%>
+
+    <% if @product.options.any? %>
+      <div class="draggable-options p-12 w-1/2">
+        <ul role="list" id="sortable-options" data-controller="sortable" class="divide-y divide-gray-100 overflow-hidden bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl">
+          <% @product.options.each_with_index do |option, index| %>
+            <li class="relative flex px-3 py-4 sm:px-6 drag-handle cursor-move bg-white" data-id="<%= index + 1 %>">
+              <div class="flex w-full gap-x-3 items-center">
+
+                <div class="py-1 px-2 flex items-center space-x-2 mr-2 rounded border border-violet-100">
+                  <div class="flex-none rounded-full bg-violet-500/20 p-1">
+                    <div class="size-1.5 rounded-full bg-violet-500"></div>
+                  </div>
+                  <div class="text-violet-600 text-xs font-bold">
+                    <%= "#{index + 1}" %>
+                  </div>
                 </div>
-              <% end %>
-            <% end %>
 
-          </div>
+                <%= f.fields_for :options, option do |option_fields| %>
+                  <%= option_fields.input :content, wrapper: :small_input, label: false %>
+                  <%= option_fields.input :order, as: :hidden, value: option.order %>
+                <% end %>
+              </div>
+              <div class="flex shrink-0 items-center gap-x-4">
+                <%= inline_svg_tag("icons/dragging.svg", class: "h-5 w-5 shrink-0 text-gray-600")%>
 
-          <%= f.fields_for :options, option do |option_fields| %>
-            <%= option_fields.input :content, wrapper: :small_input, label: false %>
+                <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
+                  <div class="flex space-x-3 items-center">
+                    <%= inline_svg_tag("icons/minus-circle.svg", class: "h-5 w-5 shrink-0 text-red-500") %>
+                  </div>
+                <% end %>
+              </div>
+            </li>
           <% end %>
+        </ul>
+      </div>
+    <% else %>
 
-
+      <div class="text-center flex flex-col items-center p-12 w-1/2  bg-gray-50">
+        <div class="rounded px-4 py-3 flex items-center border border-gray-100 bg-white">
+          <%= inline_svg_tag("icons/exclamation-circle.svg", class: "h-6 w-6 shrink-0 text-violet-500") %>
+          <div class="text-[12px] font-medium text-gray-800 ml-2">Pas d'options pour ce produit</div>
         </div>
-      <% end %>
-    </div>
+      </div>
+
+    <% end %>
 
 
 
